--- a/portfolio.css
+++ b/portfolio.css
@@ -38,11 +38,8 @@
   font-family: "Ultra";
   src: url(fonts/Ultra/Ultra-Regular.ttf);
 }
-
 body {
   margin: 0;
-  padding: 0;
-  position: relative;
 }
 header,
 footer,
@@ -56,26 +53,147 @@ img {
   padding: 0;
   display: block;
 }
+.clear {
+  clear: both;
+}
 header {
+  background-color: white;
+  height: 6vw;
   width: 100%;
   position: fixed;
-  box-shadow: 0 0 10px 0 #bdb0a9;
-  padding-bottom: 0.1vw;
-  padding-top: 1.4vw;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  box-shadow: 0 0 0.7vw 0 #bdb0a9;
 }
 #main_title {
-  margin-top: 0;
+  width: 25%;
+  margin-top: 0.5vw;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   font-weight: 10;
   font-family: "Tangerine";
-  letter-spacing: 5px;
-  font-size: 50px;
+  letter-spacing: 0.3vw;
+  font-size: 3vw;
 }
 .icon {
   margin-left: 0.5%;
 }
-p {
-  width: 30%;
-  font-size: 1.3vw;
-  font-family: Arial;
+.decor1 {
+  position: absolute;
+  top: 0;
+  left: 75%;
+  float: right;
+  width: 25%;
+  height: 50vw;
+  background-color: #f8dda4;
+}
+header .linkstripeleft,
+header .linkstriperight {
+  float: right;
+  height: 0.3vw;
+  width: 10%;
+  background-color: #f8dda4;
+  margin-right: 1.5%;
+  border-radius: 5vw;
+}
+header .linkstripeleft {
+  margin-right: 2%;
+}
+header nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+header nav ul li a {
+  float: right;
+  margin-right: 3.5%;
+  height: 3vw;
+  width: 5%;
+  color: black;
+  font-size: 1.2vw;
+  font-family: "DM";
+  font-style: normal;
+  text-decoration: none;
+  position: absolute;
+  top: 2.3vw;
+  left: 79.5%;
+  transition: all 300ms;
+}
+header nav ul li a:hover {
+  transform: scale(1.2, 1.2);
+}
+header nav ul li .link2 {
+  margin-right: 6.5%;
+  left: 91.5%;
+}
+section main {
+  width: 70%;
+}
+section main p {
+  float: left;
+  margin-top: 10vw;
+  padding-left: 15%;
+  width: 100%;
+  height: 2vw;
+  font-size: 6vw;
+  font-family: "DM";
+}
+section main .moretext {
+  margin-top: 0vw;
+  font-size: 5vw;
+  padding-left: 22%;
+}
+section main .moretext2 {
+  padding-left: 35%;
+  margin-bottom: 9vw;
+}
+section main #contact {
+  background-color: #f8dda4;
+  margin-left: 40%;
+  margin-right: auto;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  border-radius: 2vw;
+  font-family: "Tangerine";
+  font-size: 4.3vw;
+  color: black;
+  text-decoration: none;
+}
+section .decor1 .image {
+  width: 90%;
+  height: 22.25vw;
+  background-color: rgb(238, 238, 238);
+  border: 0.1vw solid black;
+  margin-top: 8vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+section .decor1 .image img {
+  max-width: 100%;
+}
+section .decor1 .info {
+  font-family: "DM";
+  font-size: 1.2vw;
+  margin-top: 0.5vw;
+  margin-left: 1.3vw;
+}
+.devider {
+  position: absolute;
+  top: 50vw;
+  width: 100%;
+  height: 0.2vw;
+  background-color: #f8dda4;
+}
+.designs {
+  position: absolute;
+  top: 51vw;
+  width: 100%;
+  height: 20vw;
+  font-size: 1.5vw;
+  font-family: "DM";
 }
