--- a/contactpage.css
+++ b/contactpage.css
@@ -89,21 +89,21 @@ header nav ul li .link2 {
   left: 91.5%;
 }
 section {
-  float: left;
   width: 100%;
 }
 section main {
-  width: 38%;
+  width: 80%;
   margin-top: 8vw;
+  margin-left: 18%;
 }
 section main p {
   margin-top: 0vw;
-  padding-left: 7%;
   width: 100%;
   height: 2vw;
   font-size: 4vw;
   font-family: "DM";
 }
+/*
 section .form {
   padding-top: 0vw;
   margin-top: 0vw;
@@ -139,4 +139,41 @@ section .send {
   position: absolute;
   top: 35vw;
   left: 59%;
+}*/
+section form {
+  width: 35%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 7vw;
+}
+input[type="text"],
+select,
+textarea {
+  resize: vertical;
+  border: 0.05vw solid #b8b7b7;
+  width: 100%;
+  height: 2vw;
+  border: 0.005 solid black;
+  padding-left: 1vw;
+  font-size: 1.2vw;
+  border-radius: 1vw;
+  font-family: "DM";
+}
+label {
+  font-family: "DM";
+  font-size: 1.2vw;
+}
+textarea {
+  height: 5vw;
+}
+input[type="submit"] {
+  background-color: #f8dda4;
+  border-radius: 2vw;
+  border: none;
+  font-size: 1.7vw;
+  font-family: "DM";
+  padding-left: 2vw;
+  padding-right: 2vw;
+  margin-left: 40%;
+  margin-top: 1vw;
 }
