--- a/contactpage.css
+++ b/contactpage.css
@@ -25,6 +25,8 @@ img {
   clear: both;
 }
 header {
+  display: flex;
+  justify-content: flex-end;
   background-color: white;
   height: 6vw;
   width: 100%;
@@ -37,9 +39,7 @@ header {
 #main_title {
   width: 25%;
   margin-top: 0.5vw;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
+  margin-right: 14%;
   text-align: center;
   font-weight: 10;
   font-family: "Tangerine";
@@ -49,17 +49,28 @@ header {
 .icon {
   margin-left: 0.5%;
 }
+.decor1 {
+  position: absolute;
+  top: 0;
+  left: 75%;
+  float: right;
+  width: 25%;
+  height: 50vw;
+  background-color: #f8dda4;
+}
 header .linkstripeleft,
 header .linkstriperight {
   float: right;
   height: 0.3vw;
   width: 10%;
   background-color: #f8dda4;
-  margin-right: 1.5%;
+  margin-right: 2%;
+  margin-top: auto;
+  margin-bottom: 1.3vw;
   border-radius: 5vw;
 }
 header .linkstripeleft {
-  margin-right: 2%;
+  margin-right: 1.5%;
 }
 header nav ul {
   margin: 0;
@@ -103,43 +114,7 @@ section main p {
   font-size: 4vw;
   font-family: "DM";
 }
-/*
-section .form {
-  padding-top: 0vw;
-  margin-top: 0vw;
-  margin-left: 50%;
-  height: 2vw;
-  width: 30%;
-  background-color: white;
-  border: 0.1vw solid grey;
-}
-section .mail {
-  margin-top: 2vw;
-}
-section .message {
-  height: 13vw;
-  margin-top: 2vw;
-}
-section .formtext {
-  font-family: "DM";
-  margin-top: 0vw;
-  margin-left: 1%;
-  font-size: 1.2vw;
-}
-section .send {
-  background-color: #f8dda4;
-  font-family: "DM";
-  font-size: 1.3vw;
-  padding-left: 2vw;
-  padding-top: 0.1vw;
-  padding-bottom: 0.1vw;
-  border-radius: 1vw;
-  width: 10%;
-  height: 2vw;
-  position: absolute;
-  top: 35vw;
-  left: 59%;
-}*/
+
 section form {
   width: 35%;
   margin-left: auto;
@@ -176,4 +151,84 @@ input[type="submit"] {
   padding-right: 2vw;
   margin-left: 40%;
   margin-top: 1vw;
+}
+@media screen and (max-width: 664px) {
+  header {
+    display: flex;
+    justify-content: flex-end;
+    height: 10vw;
+  }
+  #main_title {
+    width: 50%;
+    margin-top: 0vw;
+    margin-right: 8%;
+    font-size: 7vw;
+  }
+  header .linkstripeleft,
+  header .linkstriperight {
+    height: 0.5vw;
+    margin-right: 8.5%;
+  }
+  header .linkstriperight {
+    margin-left: 1.5%;
+    margin-right: 5.5%;
+  }
+  header nav ul li a {
+    margin-right: 3.5%;
+    height: 3vw;
+    width: 5%;
+    font-size: 2.7vw;
+    position: absolute;
+    top: 4vw;
+    left: 82%;
+  }
+
+  header nav ul li .link2 {
+    margin-right: 6.5%;
+    left: 66.5%;
+  }
+
+  section {
+    width: 100%;
+  }
+  section main {
+    width: 80%;
+    margin-top: 12vw;
+    margin-left: 12%;
+  }
+  section main p {
+    margin-top: 0vw;
+    width: 100%;
+    height: 2vw;
+    font-size: 8vw;
+    font-family: "DM";
+  }
+
+  section form {
+    width: 75%;
+    margin-top: 20vw;
+  }
+  input[type="text"],
+  select,
+  textarea {
+    height: 7vw;
+    font-size: 2.2vw;
+    border-radius: 3vw;
+  }
+  label {
+    font-size: 3.2vw;
+  }
+  textarea {
+    height: 10vw;
+  }
+  input[type="submit"] {
+    border-radius: 2vw;
+    border: none;
+    font-size: 5.7vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    margin-left: 35%;
+    margin-top: 2vw;
+    margin-bottom: 10vw;
+  }
 }
