--- a/design1.css
+++ b/design1.css
@@ -171,12 +171,6 @@ header nav ul li .link2 {
   grid-row: 12/15;
   margin-left: 18%;
 }
-.container .design5 {
-  grid-row: 6/7;
-  grid-column: 5/8;
-  margin-right: 2%;
-  margin-left: 22.5%;
-}
 .container .design1 img,
 .container .design2 img,
 .container .design3 img,
@@ -185,4 +179,101 @@ header nav ul li .link2 {
   max-width: 100%;
   height: auto;
   display: block;
+}
+@media screen and (max-width: 664px) {
+  header {
+    display: flex;
+    justify-content: flex-end;
+    height: 10vw;
+  }
+  #main_title {
+    width: 50%;
+    margin-top: 0vw;
+    margin-right: 8%;
+    font-size: 7vw;
+  }
+  header .linkstripeleft,
+  header .linkstriperight {
+    height: 0.5vw;
+    margin-right: 8.5%;
+  }
+  header .linkstriperight {
+    margin-left: 1.5%;
+    margin-right: 5.5%;
+  }
+  header nav ul li a {
+    margin-right: 3.5%;
+    height: 3vw;
+    width: 5%;
+    font-size: 2.7vw;
+    position: absolute;
+    top: 4vw;
+    left: 82%;
+  }
+
+  header nav ul li .link2 {
+    margin-right: 6.5%;
+    left: 66.5%;
+  }
+  .container {
+    grid-template-rows: repeat(20, 150px);
+  }
+  .container h1 {
+    grid-row: 1/2;
+    margin-top: 10vw;
+    font-size: 6vw;
+  }
+  .container .design1 {
+    grid-row: 3/4;
+    grid-column: 2/7;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .container .text1 {
+    grid-column: 2/7;
+    grid-row: 5/6;
+    margin-top: 5vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .design2 {
+    grid-row: 7/9;
+    grid-column: 2/7;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .text2 {
+    grid-column: 2/7;
+    grid-row: 9/11;
+    margin-top: 10vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .design3 {
+    grid-row: 12/13;
+    grid-column: 2/7;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .container .text3 {
+    grid-column: 2/7;
+    grid-row: 14/15;
+    margin-top: 10vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .design4 {
+    grid-row: 16/18;
+    grid-column: 2/7;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .text4 {
+    grid-column: 2/7;
+    grid-row: 18/19;
+    margin-top: 20vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
