--- a/designs.css
+++ b/designs.css
@@ -172,3 +172,92 @@ header nav ul li .link2 {
   top: -3vw;
   left: 2%;
 }
+@media screen and (max-width: 664px) {
+  header {
+    display: flex;
+    justify-content: flex-end;
+    height: 10vw;
+  }
+  #main_title {
+    width: 50%;
+    margin-top: 0vw;
+    margin-right: 8%;
+    font-size: 7vw;
+  }
+  header .linkstripeleft,
+  header .linkstriperight {
+    height: 0.5vw;
+    margin-right: 8.5%;
+  }
+  header .linkstriperight {
+    margin-left: 1.5%;
+    margin-right: 5.5%;
+  }
+  header nav ul li a {
+    margin-right: 3.5%;
+    height: 3vw;
+    width: 5%;
+    font-size: 2.7vw;
+    position: absolute;
+    top: 4vw;
+    left: 82%;
+  }
+
+  header nav ul li .link2 {
+    margin-right: 6.5%;
+    left: 66.5%;
+  }
+  .container {
+    grid-template-rows: repeat(16, 150px);
+  }
+  .container h1 {
+    grid-row: 1/2;
+    margin-top: 12vw;
+    font-size: 10vw;
+  }
+  .container .main_design {
+    grid-row: 3/4;
+    grid-column: 2/7;
+    margin-top: 20vw;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .container .design2 {
+    grid-row: 6/7;
+    grid-column: 2/7;
+    margin-top: 5vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .design3 {
+    grid-row: 9/10;
+    grid-column: 2/7;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .design4 {
+    grid-row: 12/13;
+    grid-column: 2/7;
+    margin-top: 10vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .design5 {
+    grid-row: 15/16;
+    grid-column: 2/7;
+    margin-top: 20vw;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .container .main_design a,
+  .container .design2 a,
+  .container .design3 a,
+  .container .design4 a,
+  .container .design5 a {
+    border-radius: 2.5vw;
+    font-size: 5.5vw;
+    padding: 1vw;
+    top: 2vw;
+    left: 35%;
+  }
+}
