--- a/portfolio.css
+++ b/portfolio.css
@@ -157,18 +157,87 @@ section .decor1 .info {
   margin-top: 0.5vw;
   margin-left: 1.3vw;
 }
-.devider {
-  position: absolute;
-  top: 50vw;
-  width: 100%;
-  height: 0.2vw;
-  background-color: #f8dda4;
-}
-.designs {
-  position: absolute;
-  top: 51vw;
-  width: 100%;
-  height: 20vw;
-  font-size: 1.5vw;
-  font-family: "DM";
+
+@media screen and (max-width: 664px) {
+  header {
+    display: flex;
+    justify-content: flex-start;
+    background-color: white;
+    height: 10vw;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    box-shadow: 0 0 0.7vw 0 #bdb0a9;
+  }
+  #main_title {
+    width: 50%;
+    margin-top: 0vw;
+    margin-right: 0%;
+    text-align: center;
+    font-weight: 10;
+    font-family: "Tangerine";
+    letter-spacing: 0.3vw;
+    font-size: 7vw;
+  }
+
+  header .linkstripeleft,
+  header .linkstriperight {
+    height: 0.5vw;
+  }
+  header .linkstripeleft {
+    margin-right: 1.5%;
+  }
+  header nav ul li a {
+    margin-right: 3.5%;
+    height: 3vw;
+    width: 5%;
+    font-size: 2.7vw;
+    position: absolute;
+    top: 3vw;
+    left: 63.5%;
+  }
+
+  header nav ul li .link2 {
+    margin-right: 6.5%;
+    left: 51.5%;
+  }
+  section {
+    height: 25vw;
+  }
+  section main {
+    width: 100%;
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  section main p {
+    margin-top: 15vw;
+    font-size: 10vw;
+  }
+  section main .moretext {
+    font-size: 8vw;
+  }
+  section main .moretext2 {
+    margin-bottom: 16vw;
+  }
+  section main #contact {
+    margin-left: 30%;
+    border-radius: 5vw;
+    font-size: 10vw;
+  }
+  .decor1 {
+    top: 80vw;
+    left: 0;
+    width: 100%;
+    height: auto;
+  }
+  section .decor1 .image {
+    width: 90%;
+    height: auto;
+  }
+  section .decor1 .info {
+    font-size: 5.2vw;
+    margin-left: 5vw;
+  }
 }
