--- a/design1.css
+++ b/design1.css
@@ -180,6 +180,15 @@ header nav ul li .link2 {
   height: auto;
   display: block;
 }
+footer {
+  border-top: 0.1vw solid #f8dda4;
+  margin-top: 9.5vw;
+  width: 100%;
+  height: 10vw;
+}
+footer h3 {
+  margin-left: 2vw;
+}
 @media screen and (max-width: 664px) {
   header {
     display: flex;
