--- a/portfolio.css
+++ b/portfolio.css
@@ -115,6 +115,22 @@ section main p {
   height: 2vw;
   font-size: 6vw;
   font-family: "DM";
+  animation: scaleUpColor 1s ease-in-out;
+  animation-delay: 500ms;
+}
+@keyframes scaleUpColor {
+  0% {
+    transform: scale(1, 1);
+    color: #f8dda4;
+  }
+  50% {
+    transform: scale(1.25, 1.25);
+    color: #f8dda4;
+  }
+  100% {
+    transform: scale(1, 1);
+    color: black;
+  }
 }
 section main .moretext {
   margin-top: 0vw;
@@ -157,7 +173,15 @@ section .decor1 .info {
   margin-top: 0.5vw;
   margin-left: 1.3vw;
 }
-
+footer {
+  border-top: 0.1vw solid #f8dda4;
+  margin-top: 9.5vw;
+  width: 100%;
+  height: 10vw;
+}
+footer h3 {
+  margin-left: 2vw;
+}
 @media screen and (max-width: 664px) {
   header {
     display: flex;
